feat: implement move handling and evaluation logic in chess engine